# vscode-python-template

./: README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
