[tool.isort]
profile = "black"

[tool.poetry]
name = "vscode-python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.6.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
